--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <link href='https://api.tiles.mapbox.com/mapbox.js/v1.6.1/mapbox.css' rel='stylesheet' />
 <link href='css/alumni-map.css' rel='stylesheet' />
 
-<script src='//api.tiles.mapbox.com/mapbox.js/plugins/leaflet-markercluster/v0.4.0/leaflet.markercluster.js'></script>
+<script src='js/marker-cluster.js'></script>
 <link href='//api.tiles.mapbox.com/mapbox.js/plugins/leaflet-markercluster/v0.4.0/MarkerCluster.css' rel='stylesheet' />
 <link href='//api.tiles.mapbox.com/mapbox.js/plugins/leaflet-markercluster/v0.4.0/MarkerCluster.Default.css' rel='stylesheet' />
 
@@ -20,6 +20,7 @@
 <div id='info' style='display:none'></div>
 <input placeholder='search...' id='search' />
 
+<script src='js/alumni-map-data.js'></script>
 <script src='js/alumni-map.js'></script>
 
 </body>
